--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </tr>
         <tr>
             <td>React Task- 3</td>
-            <td><a href="https://github.com/arpita-08/React-Task-3.git" target="_blank"> OPEN </a></td>
+            <td><a href="https://https://github.com/Sameer12062003/React-Task-3.git" target="_blank"> OPEN </a></td>
             <td><a href="https://react-task-3-lac.vercel.app/" target ="_blank"> OPEN</a></td>
         </tr>
         <tr>
